Fix action bar on mobile

--- a/src/AppViewLite.Web/wwwroot/app.css
+++ b/src/AppViewLite.Web/wwwroot/app.css
@@ -397,7 +397,7 @@ ul {
 
 
 .post-action-bar-spacer {
-    width: 140px;
+    width: 24%;
     display: inline-block;
 }
 
